@@ -20,17 +20,17 @@ function keyPressFigWav(obj, ~, hEvent)
 
         case 'leftarrow' % select previous cluster
             if jrclust.utils.keyMod(hEvent, 'shift')
-                selected_ = [obj.selected(1), max(obj.selected(end)-1, 1)];
+                selected_ = [obj.selected(1), obj.showSubset(max(obj.unitIndex(obj.selected(end))-1, 1))];
             else
-                selected_ = max(obj.selected(1)-1, 1);
+                selected_ = obj.showSubset(max(obj.unitIndex(obj.selected(end))-1, 1));
             end
             obj.updateSelect(selected_);
 
         case 'rightarrow' % select next cluster
             if jrclust.utils.keyMod(hEvent, 'shift')
-                selected_ = [obj.selected(1), min(obj.selected(end)+1, obj.hClust.nClusters)];
+                selected_ = [obj.selected(1), obj.showSubset(min(obj.unitIndex(obj.selected(end))+1, obj.nShown))];
             else
-                selected_ = min(obj.selected(1)+1, obj.hClust.nClusters);
+                selected_ = obj.showSubset(min(obj.unitIndex(obj.selected(end))+1, obj.nShown));
             end
             obj.updateSelect(selected_);
 
@@ -66,7 +66,14 @@ function keyPressFigWav(obj, ~, hEvent)
 
         case 'g'
             dlgAns = jrclust.utils.inputdlgNum('Go to a cluster', '', 1);
-            if ~isnan(dlgAns) && dlgAns > 0 && dlgAns <= obj.hClust.nClusters
+            if ismember(dlgAns, obj.showSubset)
+                obj.updateSelect(dlgAns);
+            elseif ~isnan(dlgAns)
+                obj.showSubset = sort([obj.showSubset(:); dlgAns])';
+
+                % replot
+                obj.updateFigWav();
+                obj.updateFigSim();
                 obj.updateSelect(dlgAns);
             end
 
@@ -127,7 +134,7 @@ function keyPressFigWav(obj, ~, hEvent)
 
         case 'r' % reset view
             hFigWav.wait(1);
-            hFigWav.axApply('default', @axis, [0, obj.hClust.nClusters + 1, 0, obj.hCfg.nSites + 1]);
+            hFigWav.axApply('default', @axis, [0, obj.nShown + 1, 0, obj.hCfg.nSites + 1]);
             hFigWav.wait(0);
 
         case 's' % split
